Fixed small inconsistencies.

--- a/GeneticAlgNetControl/Pages/Delete.cshtml
+++ b/GeneticAlgNetControl/Pages/Delete.cshtml
@@ -69,10 +69,10 @@
                     </div>
                 </div>
                 <div class="card-body p-0">
-                    <ul class="list-group list-group-flush item-group">
+                    <ul class="list-group list-group-flush">
                         @foreach (var item in Model.View.Items)
                         {
-                            <li class="list-group-item list-group-item-action list-group-item-light item-group-item">
+                            <li class="list-group-item list-group-item-action list-group-item-light">
                                 <div class="row align-items-center">
                                     <div class="col-6 col-xl-6 text-center text-truncate">
                                         <div>
