Updated UI and code for the Dashboard page.

--- a/GeneticAlgNetControl/wwwroot/css/site.css
+++ b/GeneticAlgNetControl/wwwroot/css/site.css
@@ -21,3 +21,8 @@ main {
 .validation-summary-errors ul {
     margin-bottom: 0;
 }
+
+/* Style for the dropdown menus. */
+.dropdown-menu {
+    z-index: 1021;
+}
