Fixed small UI inconsistencies.

--- a/GeneticAlgNetControl/Pages/About.cshtml
+++ b/GeneticAlgNetControl/Pages/About.cshtml
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="container my-2">
-        <div class="card px-5 py-4">
+        <div class="card px-5 py-4 shadow-sm">
             <p>
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie vel tellus sit amet imperdiet. Sed laoreet, nisi sit amet ullamcorper sodales, nisi purus pellentesque eros, eu maximus mauris nisi eu lacus. Curabitur blandit egestas ornare. Pellentesque lacus diam, ullamcorper a lacinia a, consectetur vel magna. Proin imperdiet leo sed ante tempus, vitae molestie quam euismod. Donec at massa eu mi euismod maximus at vitae sapien. Vestibulum nec erat nulla. In sit amet malesuada ex, eget congue justo. Morbi convallis, massa nec feugiat vulputate, nisl elit semper dui, ac egestas ligula urna quis lacus. Nulla posuere purus quis pellentesque iaculis. Sed in diam sed quam interdum tincidunt hendrerit ac diam. Fusce tempus risus non dapibus gravida. Integer commodo ante sit amet aliquet ultrices.</span>
             </p>
