--- a/GeneticAlgNetControl/Pages/Create.cshtml
+++ b/GeneticAlgNetControl/Pages/Create.cshtml
@@ -28,12 +28,12 @@
             </div>
         </div>
     </div>
-    <form method="post">
+    <form method="post" class="d-flex flex-column">
         <div class="container my-2">
-            <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="alert alert-danger mb-0 shadow-sm"></div>
         </div>
         <div class="container my-2">
-            <div class="card">
+            <div class="card shadow-sm">
                 <div class="card-header text-white bg-info">
                     <div class="row align-items-center">
                         <div class="col-11 text-left">
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="container my-2">
-            <div class="card">
+            <div class="card shadow-sm">
                 <div class="card-header text-white bg-primary">
                     <div class="row align-items-center">
                         <div class="col-11 text-left">
@@ -199,7 +199,7 @@
             </div>
         </div>
         <div class="container my-2">
-            <div class="card">
+            <div class="card shadow-sm">
                 <div class="card-header text-white bg-secondary">
                     <div class="row align-items-center">
                         <div class="col-11 text-left">
@@ -333,7 +333,7 @@
             </div>
         </div>
         <div class="container my-2">
-            <button type="submit" class="btn btn-block btn-success" title="Create">
+            <button type="submit" class="btn btn-block btn-success shadow-sm" title="Create">
                 <span>Create</span>
             </button>
         </div>
