--- a/GeneticAlgNetControl/Pages/Dashboard.cshtml
+++ b/GeneticAlgNetControl/Pages/Dashboard.cshtml
@@ -34,7 +34,7 @@
     </div>
     <div class="container my-2">
         <div class="row align-items-center">
-            <div class="col-md-6 col-xl-3 my-1 my-xl-0">
+            <div class="col-md-6 col-xl-3 mb-1 mb-xl-0">
                 <div class="card shadow-sm item-group-statistic">
                     <div class="card-body">
                         <div class="row align-items-center">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-xl-3 my-1 my-xl-0">
+            <div class="col-md-6 col-xl-3 mb-1 mb-xl-0">
                 <div class="card shadow-sm item-group-statistic">
                     <div class="card-body">
                         <div class="row align-items-center">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-xl-3 my-1 my-xl-0">
+            <div class="col-md-6 col-xl-3 mt-1 mt-xl-0">
                 <div class="card shadow-sm item-group-statistic">
                     <div class="card-body">
                         <div class="row align-items-center">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-xl-3 my-1 my-xl-0">
+            <div class="col-md-6 col-xl-3 mt-1 mt-xl-0">
                 <div class="card shadow-sm item-group-statistic">
                     <div class="card-body">
                         <div class="row align-items-center">
