--- a/GeneticAlgNetControl/Pages/Error.cshtml
+++ b/GeneticAlgNetControl/Pages/Error.cshtml
@@ -7,7 +7,7 @@
 
 <div class="flex-grow-1 d-flex flex-column justify-content-center">
     <div class="container">
-        <div class="card p-5 m-2">
+        <div class="card p-5 m-2 shadow-sm">
             <div class="row">
                 <div class="col-lg-4 d-flex flex-column justify-content-center align-items-center my-4 my-lg-0">
                     <div class="border rounded-circle p-5">
