--- a/GeneticAlgNetControl/Pages/Save.cshtml
+++ b/GeneticAlgNetControl/Pages/Save.cshtml
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="container my-2">
-        <div class="alert alert-info mb-0">
+        <div class="alert alert-info mb-0 shadow-sm">
             <span><i class="fas fa-info-circle"></i></span>
             <span>The following @Model.View.Items.Count() item@(Model.View.Items.Count() != 1 ? "s" : string.Empty) will be downloaded in a ZIP archive containing the specified file format.</span>
         </div>
@@ -34,7 +34,7 @@
     @if (!Model.View.Items.Any())
     {
         <div class="container my-2">
-            <div class="alert alert-danger mb-0">
+            <div class="alert alert-danger mb-0 shadow-sm">
                 <span><i class="fas fa-exclamation-circle"></i></span>
                 <span class="font-weight-bold">No items have been found.</span>
             </div>
@@ -43,7 +43,7 @@
     else
     {
         <div class="container my-2">
-            <div class="card">
+            <div class="card shadow-sm">
                 <div class="card-header text-white bg-dark">
                     <div class="row align-items-center font-weight-bold">
                         <div class="col-6 col-xl-6 text-center text-truncate">
